@@ -355,9 +355,9 @@
       <module id="eog"/>
       <module id="epiphany" branch="gnome-2-18"/>
       <module id="evince"/>
-      <module id="evolution"/>
-      <module id="evolution-data-server"/>
-      <module id="evolution-exchange"/>
+      <module id="evolution" branch="gnome-2-18"/>
+      <module id="evolution-data-server" branch="gnome-2-18"/>
+      <module id="evolution-exchange" branch="gnome-2-18"/>
       <module id="evolution-webcal" branch="gnome-2-18"/>
       <module id="fast-user-switch-applet"/>
       <module id="file-roller"/>
@@ -392,7 +392,7 @@
       <module id="gnome-volume-manager"/>
       <module id="gnopernicus"/>
       <module id="gok"/>
-      <module id="gtkhtml"/>
+      <module id="gtkhtml" branch="gnome-2-18"/>
       <module id="gtksourceview"/>
       <module id="gucharmap"/>
       <module id="libgnomeprint"/>
