@@ -1,3 +1,9 @@
+2007-03-17  Claude Paroz  <claude@2xlibre.net>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in: Branched evolution, evolution-data-server,
+	evolution-exchange and gtkhtml for 2.18.
+
 2007-03-16  Claude Paroz  <claude@2xlibre.net>
 	
 	* releases.xml.in: Removed sawfish reference, unable to generate pot
